[gd_scene load_steps=31 format=3 uid="uid://duqsx2dsrpunk"]

[ext_resource type="Script" uid="uid://bwnq4yk8mqe3o" path="res://Scenes/Enemies/snake_enemy.gd" id="1_5vbq6"]
[ext_resource type="AudioStream" uid="uid://ky4sbyuirncy" path="res://Ninja Adventure - Asset Pack/Sounds/Zappsplat Sounds/zapsplat_cartoon_forced_squeeze_squelch_002_41906.mp3" id="2_54utv"]
[ext_resource type="AudioStream" uid="uid://bbbw2euvoixj5" path="res://Ninja Adventure - Asset Pack/Sounds/Zappsplat Sounds/zapsplat_cartoon_dribble_squelch.mp3" id="3_4o3pu"]
[ext_resource type="Texture2D" uid="uid://bon8bwa3tnt2u" path="res://Ninja Adventure - Asset Pack/Actor/Monsters/Snake2/Snake2.png" id="6_4o3pu"]
[ext_resource type="AudioStream" uid="uid://5ne1ar6p6mdd" path="res://Ninja Adventure - Asset Pack/Sounds/Zappsplat Sounds/zapsplat_animals_snake_hiss_short_14693.mp3" id="7_54utv"]
[ext_resource type="AudioStream" uid="uid://bynjpiltp062s" path="res://Ninja Adventure - Asset Pack/Sounds/Zappsplat Sounds/zapsplat_cartoon_spit_sqeulch_splat_liquid_75174.mp3" id="8_q8ft8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ld0qu"]
radius = 195.064

[sub_resource type="AtlasTexture" id="AtlasTexture_4xfww"]
atlas = ExtResource("6_4o3pu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xk4o"]
atlas = ExtResource("6_4o3pu")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_owdg4"]
atlas = ExtResource("6_4o3pu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn32v"]
atlas = ExtResource("6_4o3pu")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb4rv"]
atlas = ExtResource("6_4o3pu")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgv5h"]
atlas = ExtResource("6_4o3pu")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8ft8"]
atlas = ExtResource("6_4o3pu")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpu14"]
atlas = ExtResource("6_4o3pu")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag5gq"]
atlas = ExtResource("6_4o3pu")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxrs5"]
atlas = ExtResource("6_4o3pu")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_24kkd"]
atlas = ExtResource("6_4o3pu")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tin15"]
atlas = ExtResource("6_4o3pu")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gywt"]
atlas = ExtResource("6_4o3pu")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjjcb"]
atlas = ExtResource("6_4o3pu")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1rxv"]
atlas = ExtResource("6_4o3pu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cusbo"]
atlas = ExtResource("6_4o3pu")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0djx"]
atlas = ExtResource("6_4o3pu")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5xkk"]
atlas = ExtResource("6_4o3pu")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sv1en"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xfww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xk4o")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_owdg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn32v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb4rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgv5h")
}],
"loop": true,
"name": &"move_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8ft8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpu14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag5gq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxrs5")
}],
"loop": true,
"name": &"move_left",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24kkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tin15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gywt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjjcb")
}],
"loop": true,
"name": &"move_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1rxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cusbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0djx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5xkk")
}],
"loop": true,
"name": &"move_up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1u7tg"]
radius = 8.0

[sub_resource type="Animation" id="Animation_1u7tg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sv1en"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.3, 0.3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jwhlm"]
_data = {
&"RESET": SubResource("Animation_1u7tg"),
&"death": SubResource("Animation_sv1en")
}

[node name="SnakeEnemy" type="CharacterBody2D"]
collision_layer = 16
motion_mode = 1
script = ExtResource("1_5vbq6")
snake_sounds = [ExtResource("2_54utv"), ExtResource("3_4o3pu")]

[node name="PlayerDetectArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="DirectionNode2D" type="Node2D" parent="PlayerDetectArea2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerDetectArea2D"]
position = Vector2(17, 10)
rotation = 3.14159
scale = Vector2(1, 1.83523)
polygon = PackedVector2Array(-2.99986, -31.0588, 37.0001, -31.0587, 32, 7.08362, 23.9999, 11.4427, 10.9999, 11.4427, 3.99997, 6.5387)

[node name="ChaseZoneArea2D" type="Area2D" parent="."]
light_mask = 16
visibility_layer = 2
collision_layer = 16
collision_mask = 2

[node name="ChaseShape" type="CollisionShape2D" parent="ChaseZoneArea2D"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_ld0qu")
debug_color = Color(0.932176, 0.204303, 0.41562, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sv1en")
animation = &"move_up"
autoplay = "idle"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_1u7tg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jwhlm")
}

[node name="SnakeStepTimer" type="Timer" parent="."]
wait_time = 0.04

[node name="SnakeStepPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
area_mask = 19

[node name="SnakeDeathPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_54utv")

[node name="DamageSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_q8ft8")

[node name="RandomMovementTimer" type="Timer" parent="."]
autostart = true

[node name="StepTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackNoisePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_54utv")

[connection signal="body_entered" from="PlayerDetectArea2D" to="." method="_on_player_detect_area_2d_body_entered"]
[connection signal="body_exited" from="PlayerDetectArea2D" to="." method="_on_player_detect_area_2d_body_exited"]
[connection signal="body_entered" from="ChaseZoneArea2D" to="." method="_on_chase_zone_area_2d_body_entered"]
[connection signal="body_exited" from="ChaseZoneArea2D" to="." method="_on_chase_zone_area_2d_body_exited"]
[connection signal="timeout" from="SnakeStepTimer" to="." method="_on_slime_step_timer_timeout"]
[connection signal="timeout" from="RandomMovementTimer" to="." method="_on_random_movement_timer_timeout"]
